# qgroundcontrol

./: CMakeLists.txt  CMakeLists_v1.txt  README.md  qgcimages.qrc  qgcresources.qrc  qgroundcontrol.qrc
custom/: CMakeLists.txt  qgcimages.qrc
deploy/linux/: .create_linux_appimage.sh.swp
